<resources>
    <string name="app_name" translatable="false">Mediterraneo</string>
    <string name="action_settings">Configuración</string>
    <string name="total_to_pay">Total a pagar</string>
    <string name="energy">Energía (Kcal)</string>
    <string name="protein">Proteina (g)</string>
    <string name="fat">Grasa (g)</string>
    <string name="cholesterol">Colesterol (mg)</string>
    <string name="carbohydrate">Carbohidratos (g)</string>
    <string name="fiber">Fibra (g)</string>
    <string name="vitamin_a">Vitamina A (μg)</string>
    <string name="vitamin_b6">Vitamina B6 (mg)</string>
    <string name="vitamin_b12">Vitamina B12 (μg)</string>
    <string name="vitamin_c">Vitamina C (mg)</string>
    <string name="vitamin_e">Vitamina E (mg)</string>
    <string name="potassium">Potasio (mg)</string>
    <string name="iron">Hierro (mg)</string>
    <string name="a_pagar_en_carta">Total a pagar:</string>
    <string name="content">Contenido nutricional</string>
    <string name="properties">Propiedades curativas</string>
    <string name="title_my_order">Mi orden</string>
    <string name="menu_remove">Remover del pedido</string>
    <string name="menu_add">Agregar al pedido</string>
    <string name="menu_see">Ver</string>
    <string name="menu_favorite">Favorito</string>
    <string name="action_invite">Invitar amigos</string>
    <string name="added_one">+1</string>
    <string name="order_eliminated">orden eliminada</string>
    <string name="toggled_favorites">Cambiado favorito</string>
    <string name="invitation">Oferta!!!\nTe invito a un Coctel en Restaurante Mediterraneo Havana\nHaz reserva\n+53 7 832 4894\nEl resto va por ti</string>
    <string name="earn_money">Gana dinero !</string>
    <string name="earn_money_maecenas">Únete a MECENAS!</string>
    <string name="maecenas_description">Mecenas es todo aquel que desee invitar a sus amigos y contactos a visitar nuestro restaurante.
        Para ellos la casa les ofrece un coctél libre de costos. Para cada nuevo Mecenas, nuestro restaurante abrirá una cuenta donde acumulará un crédito
        a partir de cada uno de sus amigos que nos visite\n\n
        También, si lo desea, su nombre quedará inscrito para invitarle a nuestras actividades.
        Sus amigos y contactos sólo deberán hacer su reservación por el teléfono +537 832 4894\n
        O presentarse a su nombre ante nuestro Capitán de Salón.
    </string>
    <string name="phone_number" translatable="false"> +5358746805</string>
    <string name="maecenas_request">Solicito registrarme como mecenas\nmi nombre es\n</string>
    <string name="join_maecenas">Únete a mecenas!</string>
    <string name="language">Lenguaje</string>
    <string name="select_language">Seleccione el idioma</string>
    <string name="location">Localizar en mapa</string>
    <string name="invite_friends" translatable="false">invite_friends</string>
    <string name="shared_language" translatable="false">language</string>
    <string name="title_description">Descripción</string>
    <string name="description">Horario: 12:00 M a 12:00 AM.\n\n Teléfono: +53 7 832 4894\n\n  Dirección: Calle 13, No. 406 e/ F y G, Vedado, Plaza de la Revolución\n\n
    Sitio: www.medhavana.com</string>
    <string name="description2">En el Restaurante Mediterráneo-Havana nos distinguimos por ofrecer
        una selección de productos frescos y naturales que llegan directamente desde el mar y la tierra.
        </string>
    <string name="description3">Contamos con producción y elaboración propia, ausente de conservantes y aditivos,
        controlando en cada momento la calidad de cuanto ofrecemos.</string>
    <string name="description4">Nuestro equipo de cocina combina tradiciones mediterráneas,
        de la mano de Luigi, nuestro chef, oriundo de la Cerdeña, con la fusión y experiencia
        de la cocina local.</string>
    <string name="description5">Esperamos que la pasión que acá todos ponemos a su servicio,
        logre satisfacerle con este ambiente y sabor mediterráneo, ideado para hacerle sentir en familia.</string>
    <string name="description6">La finca Vista Hermosa nos provee de productos frescos y naturales, juntos formamos un genuino proyecto de la granja a la mesa.</string>
    <string name="about_us">Acerca de nosotros</string>
    <string name="read_more">Leer más</string>
    <string name="staff">Personal</string>
    <string name="staff_habanera" translatable="false">Staff Habanera</string>
    <string name="my_order_erased">Borrada \'Mi orden\'</string>
    <string name="menu_mediterraneo" translatable="false">Mediterraneo Havana</string>
    <string name="biopropiedades">Biopropiedades</string>
    <string name="awards">Premios</string>
    <string name="chef_ejecutivo">Chef Ejecutivo</string>
    <string name="chef" translatable="false">Chef</string>
    <string name="capitan">Capitán</string>
    <string name="recepcionista">Recepcionista</string>
</resources>
