<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:scaleType="centerInside"
                android:src="@drawable/title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/farm_to_table" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:id="@+id/txtDescripcion"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/image1"
                    android:adjustViewBounds="true"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description2"
                    android:textAlignment="center"
                    android:id="@+id/txtDescripcion2"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/image2"
                    android:adjustViewBounds="true"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description3"
                    android:textAlignment="center"
                    android:id="@+id/txtDescripcion3"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/image3"
                    android:adjustViewBounds="true"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description4"
                    android:textAlignment="center"
                    android:id="@+id/txtDescripcion4"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/image4"
                    android:adjustViewBounds="true"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description5"
                    android:textAlignment="center"
                    android:id="@+id/txtDescripcion5"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/image5"
                    android:adjustViewBounds="true"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/staff_habanera"-->
                    <!--android:textSize="@dimen/headline"-->
                    <!--android:textColor="@color/primary_text"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginBottom="@dimen/activity_vertical_margin"/>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:orientation="vertical"
                        android:layout_height="wrap_content" />

                    <!--<LinearLayout-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="0.2"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center_horizontal"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                            <!--android:src="@drawable/staff_irvin_manager"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:scaleType="centerInside"-->
                            <!--android:adjustViewBounds="true"-->
                            <!--/>-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textSize="@dimen/title"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:gravity="center"-->
                            <!--android:text="Irvin" />-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="Manager"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:textSize="@dimen/subhead"-->
                            <!--android:layout_marginBottom="@dimen/activity_item_margin"/>-->

                        <!--<ImageView-->
                            <!--android:src="@drawable/staff_carlos_masses_chef"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:scaleType="centerInside"-->
                            <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
                            <!--android:adjustViewBounds="true"-->
                            <!--/>-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textSize="@dimen/title"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:text="Carlos Masses" />-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="Chef"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:textSize="@dimen/subhead"-->
                            <!--android:layout_marginBottom="@dimen/activity_item_margin"/>-->

                        <!--<ImageView-->
                            <!--android:src="@drawable/staff_ivan_subchef"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:scaleType="centerInside"-->
                            <!--android:adjustViewBounds="true"-->
                            <!--/>-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textSize="@dimen/title"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:text="Ivan" />-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="Subchef"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:textSize="@dimen/subhead"-->
                            <!--android:layout_marginBottom="@dimen/activity_item_margin"/>-->

                        <!--<ImageView-->
                            <!--android:src="@drawable/staff_alex_subchef"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:scaleType="centerInside"-->
                            <!--android:adjustViewBounds="true" />-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textSize="@dimen/title"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:text="Alex" />-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="Subchef"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:textSize="@dimen/subhead"-->
                            <!--android:layout_marginBottom="@dimen/activity_item_margin"/>-->

                        <!--<ImageView-->
                            <!--android:src="@drawable/staff_amanda_hostess"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:scaleType="centerInside"-->
                            <!--android:adjustViewBounds="true" />-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:textSize="@dimen/title"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:text="Amanda" />-->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="Hostess"-->
                            <!--android:gravity="center"-->
                            <!--android:textColor="@color/primary_text"-->
                            <!--android:textSize="@dimen/subhead"-->
                            <!--android:layout_marginBottom="@dimen/activity_item_margin"/>-->

                    <!--</LinearLayout>-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



    </ScrollView>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

</RelativeLayout>